--- a/src/main/resources/static/css/meetingDetail.css
+++ b/src/main/resources/static/css/meetingDetail.css
@@ -104,7 +104,7 @@ div[id^="comment-box"] > input {
   max-width: 550px;
 }
 
-.btn {
+.btn-com ,.btn-com-del{
   background-color: #fca311;
   color: #fff;
   border: none;
@@ -115,6 +115,9 @@ div[id^="comment-box"] > input {
   border-radius: 5px;
   transition: background-color 0.3s ease;
   height: 30px;
+}
+.btn-com-del{
+	margin-left: 5px;
 }
 
 .textBtnBox {
@@ -137,9 +140,7 @@ div[id^="comment-box"] > input {
   color: #fff;
 }
 
-button:hover {
-  background-color: #e76f00;
-}
+
 
 button > img {
   width: 20px;
@@ -183,8 +184,7 @@ button > img {
   outline: none;
 }
 
-#textbox > button {
-}
+
 
 .comment > p {
   padding: 10px;
@@ -337,7 +337,7 @@ body {
   /*08-29 채승훈 마진겹칩현상? 때문에 20px 뺌*/
   margin: auto;
 
-  background: #f4f4f4;
+  background: #FFE8CF;
   padding-bottom: 10px;
 
   border-radius: 12px;
@@ -388,7 +388,9 @@ body {
 }
 
 #meetInfo {
-  margin: 20px;
+	background-color: white;
+    padding: 20px;
+ 
 }
 
 #calendar-info {
@@ -397,22 +399,22 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  border-top: 3px solid black;
+  border-bottom: 3px dashed black;
 }
 
 #calendar-info p {
   font-family: "Do Hyeon", sans-serif;
-  font-size: 60px;
+  font-size: 20px;
   font-weight: bold;
-  padding: 10px;
+  padding: 5px;
 }
 
-#calendar {
-  background: white;
-  width: 500px;
-  height: 600px;
+#date{
+	
+	font-family: "Do Hyeon", sans-serif;
+	margin-top:10px;
+	font-size: 32px
 }
-
 .allmemberImg {
   width: 50px;
   height: 50px;
@@ -517,10 +519,14 @@ body {
   color: #ffffff; /* 텍스트 색상 */
 }
 
+.btn-com:hover , .btn-com-del:hover {
+	background-color: #e76f00;
+}
 #buttones {
   display: flex;
   width: 100%;
   justify-content: space-between;
+  align-items: center;
 }
 #button3 {
   display: flex;
@@ -535,10 +541,18 @@ body {
 #back button {
   width: 88px;
   height: 45.59px;
+  font-weight: bold;
+  font-size: 1rem;
   background: #fba010;
   border: none;
   color: white;
   border-radius: 5px;
-  margin-top: 35px;
   margin-left: 5px;
+}
+
+#count{
+	
+	    font-family: "Do Hyeon", sans-serif;
+    font-size: 32px;
+	
 }
