--- a/src/main/resources/static/css/updateMembership.css
+++ b/src/main/resources/static/css/updateMembership.css
@@ -405,3 +405,79 @@ position: absolute;
 width: 500px;
 height: 500px;
 }
+#locLaText,#typeLaText {
+    background: #FCA35B;
+    padding: 10px 10px 10px 15px;
+    font-weight: bold;
+    font-size: 20px;
+    color: white;
+    border-radius: 10px;
+    margin-bottom: 15px;
+    margin-top: 15px;
+}
+.locLabox, .locSbox,
+.typeLabox, .typeSbox{
+	margin-bottom: 20px;
+	width:100%;
+	height: 100%;
+	background-color: #F3F3F3;
+	border-radius: 10px;
+	padding: 5px;
+}
+/* 체크박스 레이블 스타일 */
+.locLabox .locLNCss{
+  display: inline-flex;
+  align-items: center;
+  cursor: pointer;
+  padding: 8px 17px;
+  margin: 5px;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #293241;
+  background-color: #E0E0E0;
+  border: 2px solid #D5D5D5;
+  transition: background-color 0.3s, border-color 0.3s;
+}
+.locSbox .locLNCss{
+  display: inline-flex;
+  align-items: center;
+  cursor: pointer;
+  padding: 8px 15px;
+  margin: 5px;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #293241;
+  background-color: #E0E0E0;
+  border: 2px solid #D5D5D5;
+  transition: background-color 0.3s, border-color 0.3s;
+}
+.typeLabox .typeLNCss{
+  display: inline-flex;
+  align-items: center;
+  cursor: pointer;
+  padding: 8px 15px;
+  margin: 5px;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #293241;
+  background-color: #E0E0E0;
+  border: 2px solid #D5D5D5;
+  transition: background-color 0.3s, border-color 0.3s;
+}
+.typeSbox .typeLNCss{
+  display: inline-flex;
+  align-items: center;
+  cursor: pointer;
+  padding: 8px 16px;
+  margin: 5px;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #293241;
+  background-color: #E0E0E0;
+  border: 2px solid #D5D5D5;
+  transition: background-color 0.3s, border-color 0.3s;
+}
