--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -235,3 +235,77 @@ body {
 	font-weight: bold;
 	padding: 200px;
 }
+.rank-box{
+width:100%;
+display:flex;
+justify-content: space-between;
+margin-top:10px;
+margin-bottom:10px;
+align-items: center;
+height: 150px;
+}
+.rank-container{
+font-size: 20px;
+border-radius: 15px 15px 0 0;
+background: white;
+}
+.rank-head{
+background-color: #FCA35B;
+align-items: center;
+border-radius: 15px 15px 0 0;
+display: flex;
+justify-content:center;
+ color:white;
+ font-weight:bold;
+  width: 100%;
+  height: 50px;
+  font-size: 2rem;
+}
+.rank-body{
+	font-size: 1rem;
+	line-height: 1.5;
+	height: 100%;
+}
+.toggle-btn{
+border: none;
+background: white;
+height: 30px;
+cursor: pointer;
+}
+.toggle-btn:hover{
+background: gray;
+}
+.rank-body{
+line-height: 1.5;
+    width: 70%;
+        display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.fa-solid.fa-angle-left.fa-2x{
+ color:brown;
+}
+.fa-solid.fa-angle-right.fa-2x{
+ color:brown;
+}
+.rank-body > li:nth-child(1) {
+	font-size: 2rem;
+	text-align: center;
+}
+.rank-body ul{
+justify-content: space-between;
+}
+.select{
+position:fixed;
+left:247px;
+    border: none;
+    background: #FCA35B;
+    color: white;
+    cursor: pointer;
+}
+.nickname{
+overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 100px;
+}
