--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -701,3 +701,33 @@ input[type=text] {
 #title {
   animation: blink 3s infinite; /* 1초 간격으로 무한 반복 */
 }
+/*캘린더*/
+.fc-toolbar-title {
+	padding: 10px;
+}
+.fc-toolbar-chunk{
+	padding: 10px;
+}
+.fc .fc-daygrid-day-top{
+	flex-direction: inherit;
+}
+
+.fc .fc-toolbar-title{
+	font-weight: bold;
+}
+
+.fc-day-sun > div > a{
+	color: red;
+}
+.fc-day-sat > div > a {
+	color : #7e7eff;	
+}
+
+
+.fc-scrollgrid-sync-table tbody tr td:nth-child(1) a {
+	color: red;
+}
+.fc-scrollgrid-sync-table tbody tr td:nth-child(7) a {
+	color:#7e7eff;;
+}
+/*캘린더*/
