--- a/src/main/resources/static/css/updateMemberInfo.css
+++ b/src/main/resources/static/css/updateMemberInfo.css
@@ -32,7 +32,7 @@ body {
   max-width: 800px;
   padding: 20px;
   margin-top: 120px;
-  background: honeydew;
+  background: white;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
