css js 조금수정 찐찐찐찐찐막

--- a/src/main/resources/static/css/makeMembership.css
+++ b/src/main/resources/static/css/makeMembership.css
@@ -454,3 +454,6 @@ input[type="checkbox"]:checked + .typeLNCss {
   border: 2px solid #D5D5D5;
   transition: background-color 0.3s, border-color 0.3s;
 }
+.typeSbox, .locSbox{
+	padding: 0px;
+}
